--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,17 +45,12 @@
     }
 
     /* Clear floats after image containers */
-    .row::after {
+    .row1::after {
+        margin-bottom: 100px;
         content: "";
         clear: both;
         display: table;
     }
-
-    .column {
-        margin-top: 1.5em;
-        width: 49%;
-    }
-
 
     /***** css for test gallery *****/
     .row1 {
@@ -66,6 +61,7 @@
 
     /* Create four equal columns that sits next to each other */
     .column1 {
+        float: left;
         flex: 25%;
         padding: 0 4px;
     }
@@ -77,6 +73,155 @@
         width: 100%;
         overflow: scroll;
     }
+
+    .column1 img:hover {
+        transition: 0.3s;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+            0 6px 20px 0 rgba(0, 0, 0, 0.19);   
+    }
+
+    /* Very very important css for galleryTester */
+    /* The Modal (background) */
+
+    * {
+        box-sizing: border-box;
+    }
+
+    .row > .column {
+        padding: 0 8px;
+    }
+
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .column {
+        float: left;
+        width: 25%;
+    }
+
+    /* The Modal (background) */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 50px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: black;
+
+    }
+
+    /* Modal Content */
+    .modal-content {
+        position: relative;
+        background-color: #fefefe;
+        margin: auto;
+        padding: 0;
+        width: 40%;
+    }
+
+    img {
+        height: 25em;
+    }
+
+    /* The Close Button */
+    .close {
+        color: white;
+        position: absolute;
+        top: 10px;
+        right: 25px;
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #999;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    .mySlides {
+        display: none;
+    }
+
+    .cursor {
+        cursor: pointer;
+    }
+
+    /* Next & previous buttons */
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 45%;
+        width: auto;
+        padding: 16px;
+        margin-top: -50px;
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        -webkit-user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    /* Number text (1/3 etc) */
+    .numbertext {
+        color: #f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+    }
+
+    .caption-container {
+        text-align: center;
+        background-color: black;
+        padding: 2px 16px;
+        color: white;
+    }
+
+    .demo {
+        opacity: 0.6;
+        height: 10em;
+        margin 1em 1em 1em 1em;
+    }
+
+    .active,
+    .demo:hover {
+        opacity: 1;
+    }
+
+    img.hover-shadow {
+        transition: 0.3s;
+    }
+
+    .hover-shadow:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+            0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+
+    /* End of very special css for galleryTester */
 
     /*** does not work ***/
     /* Responsive layout - makes a two column-layout instead of four columns */
@@ -95,11 +240,14 @@
         }
     }
 
+
+
     /***** image *****/
-    #burningImage {
-        float: left;
+    #presentPic {
+        width: auto;
         height: auto;
         border: 1px solid gray;
+        margin: 2% 30% 0% 30%;
         border-radius: 15px;
         padding: 5px;
         background-color: white;
